--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,6 @@ navbar:
       href: meetings.html
     - text: "Team"
       href: team.html
+    - text: "Mission statement"
+      href: mission-statement.html
 output: distill::distill_article
